<resources>
    <string name="app_name">My Application</string>
    <string name="titulo">CALCULADORA</string>
    <string name="numero1">Numero Uno</string>
    <string name="numero2">Numero Dos</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="error_numero_uno">Digite el numero uno</string>
    <string name="error_numero_dos">Digite el numero dos</string>
    <string name ="suma">Suma</string>
    <string name ="resta">Resta</string>
    <string name ="multiplicacion">Multiplicacion</string>
    <string name ="division">Division</string>
    <string name="error_numero_dos_division">El denominador no puede ser cero</string>
    <string-array name="opciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
</resources>
